solc_mutator_ossfuzz_seed_corpus/test_sol/test_595878f6bb354098e4a72f003e640a9e99074582997d07b27dea96c4107ba979_1f6582447f11d46e7d11ae91cc1f8c8e2ab8eefc_sol.sol
==== Source:  ====

==== Source: su0.sol ====
library L0 {
  function f0(function (address, int16, int152) internal   returns (uint240) i0,int80 i1) external    returns(bool o0)
  {
  }
  function f1() public   
  {
  }
  function f2(bool i0) public   
  {
    f1();
  }
}
pragma solidity >= 0.0.0;
struct St0 {
  int224 el0;
  function (uint256, address, bytes11) internal   returns (address) el1;
  bytes30 el2;
  bool el3;
}
// ----
// TypeError 4103: (su0.sol:27-92): Internal type is not allowed for public or external functions.
